kubernetes/ingress/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocelot-api-gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - jorgeduarte.pt
    secretName: ocelot-api-tls  # O certificado gerado será armazenado neste secret
  rules:
  - host: jorgeduarte.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ocelot-api-gateway-service
            port:
              number: 80
